removed layout issues

--- a/src/css/components/community.css
+++ b/src/css/components/community.css
@@ -2,28 +2,12 @@
   display: grid;
 }
 
-main {
+/* main {
   margin-top: 50px;
   margin-left: 300px;
   margin-right: 30px;
   margin-bottom: 30px;
-}
-
-.sidebar {
-  margin-bottom: 0px;
-}
-
-@media (max-width: 700px) {
-  .sidebar {
-    display: none;
-  }
-  .layout {
-    display: block;
-  }
-  main {
-    width: 100%;
-  }
-}
+} */
 
 #title_image img {
   width: 15px;
@@ -162,7 +146,7 @@ main {
 
 .cards {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  /* grid-template-columns: 1fr 1fr; */
   column-gap: 20px;
   row-gap: 20px;
 }
